manifests/app-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pe-wa-service
spec:
  selector:
    app: pe-wa
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: LoadBalancer
