manifests/kubernetes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pe-wa-ingress
  namespace: pe-wa
spec:
  rules:
  - host: pe-wa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pe-wa-service
            port:
              number: 80
      - path: /app
        pathType: Prefix
        backend:
          service:
            name: pe-wa-service
            port:
              number: 80
